<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="snooze">Snooze</string>
    <string name="write_your_text_here">Write Your Text Here(optional)</string>
    <string name="dismiss">Dismiss</string>
    <string name="send_simple_notification">Send Simple Notification</string>
    <string name="send_expand_layout_notification">Send Expand Layout Notification</string>
    <string name="send_notification_with_action_buttons">Send Notification With Action Buttons</string>
    <string name="send_max_priority_notification">Send Max Priority Notification</string>
    <string name="send_min_priority_notification">Send Min Priority Notification</string>
    <string name="send_combined_notification">Send Combined Notification</string>
    <string name="clear_all_notification">Clear All Notifications</string>
    <string name="notification_custom">Send Custom Notification</string>
    <string name="notificaton_text">Family Reminder, you have alert for the special day of one of your chosen person. Please click for details.</string>
    <string name="signup">Sign up</string>
    <string name="toolbar_title">Contacts</string>
    <string name="action_user_profile">View your profile</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_user_profile">User Profile</string>
    <string name="create_room">Create room</string>
    <string name="no_bio_provided">No bio is provided.</string>
    <string name="template_broadcast">Broadcast message</string>
    <string name="template_username">Username</string>
    <string name="template_details">Username - 1/1/1970 0:00 am</string>
    <string name="template_message">Message</string>
    <string name="last_active_date">Last active %s</string>
    <string name="joined_date">Joined %s</string>
    <string name="created_by_user">Created by %s</string>
    <string name="status_online">Online</string>
    <string name="status_offline">Offline</string>
    <string name="loading">Loading&#8230;</string>
    <string name="send_friend_req">Add friend</string>
    <string name="sending_friend_req">Adding&#8230;</string>
    <string name="cancel_friend_req">Cancel friend request</string>
    <string name="accept_friend_req">Accept friend request</string>
    <string name="remove_friend">Remove friend</string>
    <string name="became_friends">Became friends with you %s</string>
    <string name="block_user">Block user</string>
    <string name="is_typing"> is typing&#8230;</string>
    <string name="are_typing"> are typing&#8230;</string>
    <string name="write_a_message">Write a message</string>
    <string-array name="message_dialog_choice_list">
        <item>Copy text</item>
        <item>View details</item>
        <item>View profile</item>
    </string-array>
    <string name="asset_statements" translatable="false">[{ \"include\": \"https://api.tinode.co/.well-known/assetlinks.json\" }]</string>
    <string name="validated_address_to_use">Validated %1$s to use</string>
    <string name="enter_valid_address">Enter valid %1$s</string>
    <string name="invalid_or_unknown_credential">Invalid or unknown address</string>
    <string name="password_reset_message_sent">Message with instructions sent</string>
    <string name="app_name_full">OkMboa Messenger</string>
    <string name="app_version">Version</string>
    <string name="copyright">© 2014 – 2018 OkMboa</string>
    <string name="tinode">Tinode</string>
    <string name="login_hint">Login: alice, bob, carol, dave, eve, frank</string>
    <string name="password_hint">Password: alice123, bob123,…</string>
    <string name="new_message_hint">Type a message</string>
    <string name="send_message_button_hint">Send message</string>
    <string name="send_image_button_hint">Send image</string>
    <string name="send_file_button_hint">Send file</string>
    <string name="action_signup">Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_new">Login</string>
    <string name="password_new">Password</string>
    <string name="password_repeat">Repeat password</string>
    <string name="full_name">Full name, e.g. John Doe</string>
    <string name="tinode_logo">Tinode Logo</string>
    <string name="upload_avatar">Upload avatar picture</string>
    <string name="continue_fb">Continue with Facebook</string>
    <string name="continue_goog">Continue with Google</string>
    <string name="or">OR</string>
    <string name="action_cancel">Cancel</string>
    <string name="transport_default">default</string>
    <string name="transport_websocket">websocket</string>
    <string name="transport_long_polling">long polling</string>
    <string name="settings_host_name">Host name</string>
    <string name="settings_use_tls">Use TLS</string>
    <string name="settings_wire_transport">Wire transport</string>
    <string name="settings_host_name_summary">Change server address</string>
    <string name="settings_use_tls_summary">Use secure connection</string>
    <string name="settings_wire_transport_summary">Select wire transport</string>
    <string name="default_host_name">35.237.197.121:6060</string>
    <string name="modeReadable">can join</string>
    <string name="modeWritable">can publish</string>
    <string name="modeReadOnly">read-only</string>
    <string name="modeMuted">muted</string>
    <string name="modeAdmin">admin</string>
    <string name="modeCanDelete">can delete</string>
    <string name="modeOwner">owner</string>
    <string name="modeBlocked">blocked</string>
    <string name="modeInvited">invited</string>
    <string name="modeRequested">requested</string>
    <string name="modeUndefined">undefined</string>
    <string name="modePending">pending</string>
    <string name="action_settings">Settings</string>
    <string name="action_mute">Mute conversation</string>
    <string name="action_edit_contact">Edit contact</string>
    <string name="action_clear_messages">Clear messages</string>
    <string name="action_view_contact">View contact</string>
    <string name="action_attach">Attach</string>
    <string name="action_new_chat">New chat</string>
    <string name="action_start_by_id">Start by ID</string>
    <string name="action_search">Search</string>
    <string name="action_add_contact">Add contact</string>
    <string name="action_edit_topic">Edit topic</string>
    <string name="action_send_now">Send now</string>
    <string name="action_view_details">View details</string>
    <string name="action_copy">Copy</string>
    <string name="action_offline">Working offline</string>
    <string name="action_delete_group">Delete conversation…</string>
    <string name="avatar">Avatar picture</string>
    <string name="select_image">Select image</string>
    <string name="select_file">Select file</string>
    <string name="image_is_missing">Image is missing</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="error_login_failed">Login failed: </string>
    <string name="error_connection_failed">Connection failed: </string>
    <string name="login_required">Login required</string>
    <string name="password_required">Password required</string>
    <string name="error_new_account_failed">Account registration failed:</string>
    <string name="no_contacts">No contacts found</string>
    <string name="invite">Invite</string>
    <string name="contacts">Contacts</string>
    <string name="chats">Chats</string>
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="search_hint">Find contacts</string>
    <string name="contacts_permission_denied">Contacts not loaded: permission denied</string>
    <string name="account_already_exists">Account already exists</string>
    <string name="pick_account">Pick Account</string>
    <string name="tinode_invite_subject">Check out Tindroid Messenger</string>
    <string name="tinode_invite_body">Check out Tindroid Messenger. Download it from https://github.com/tinode/</string>
    <string name="profile_action">Tinode profile</string>
    <string name="view_profile">View Profile</string>
    <string name="tinode_message">Send Tinode message</string>
    <string name="failed_to_invite">Don\'t know how to invite - no contact info</string>
    <string name="about_title">About</string>
    <string name="failed_to_send_message">Failed to send message</string>
    <string name="failed_to_delete_messages">Failed to delete messages</string>
    <string name="topic_title">Name of the group</string>
    <string name="group_members">Group Members</string>
    <string name="name_required">Topic name required</string>
    <string name="no_members">No group members</string>
    <string name="letter_tile_font_family">sans-serif-medium</string>
    <string name="add_one_member">Add at least one group member</string>
    <string name="failed_to_create_topic">Failed to create topic</string>
    <string name="add_members">Add members</string>
    <string name="leave_group">Leave group</string>
    <string name="address">Address</string>
    <string name="topic_muted">Muted</string>
    <string name="permissions">Permissions</string>
    <string name="close">Close</string>
    <string name="invitation_text">Join my group!</string>
    <string name="no_connection">You are offline</string>
    <string name="action_failed">Action failed</string>
    <string name="placeholder_contact_title">Unnamed or unknown</string>
    <string name="placeholder_topic_title">Unnamed</string>
    <string name="placeholder_private">Private info: not set</string>
    <string name="options_menu">Options menu</string>
    <string name="current_user">You</string>
    <string name="default_permissions">Default permissions</string>
    <string name="auth_permissions">Authenticated users</string>
    <string name="anon_permissions">Anonymous users</string>
    <string name="topic_private">Additional info (private)</string>
    <string name="edit_topic">Edit Topic</string>
    <string name="edit_permissions">Edit Permissions</string>
    <string name="permission_owner">Full control (owner)</string>
    <string name="permission_join">Join</string>
    <string name="permission_read">Read</string>
    <string name="permission_write">Write</string>
    <string name="permission_approve">Approve new members</string>
    <string name="permission_share">Invite new members</string>
    <string name="permission_notifications">Receive notifications</string>
    <string name="permission_delete">Delete messages</string>
    <string name="send_message">Send message</string>
    <string name="change_permissions">Change permissions</string>
    <string name="make_owner">Make owner</string>
    <string name="remove_from_group">Remove</string>
    <string name="block">Block</string>
    <string name="confirm_member_removal">Remove %1$s from \"%2$s\"?</string>
    <string name="confirm_member_ban">Remove and ban %1$s from \"%2$s\"?</string>
    <string name="confirm_delete_topic">Do you really want to delete this conversation for everyone?</string>
    <string name="modeWriteOnly">write-only</string>
    <string name="owner_cannot_unsubscribe">Owner cannot unsubscribe</string>
    <string name="read_receipts_enabled">Send read receipts</string>
    <string name="typing_notifications_enabled">Show typing notifications</string>
    <string name="logout">Logout</string>
    <string name="type_your_message_hint">Type a message</string>
    <string name="share_live_location">Share live location</string>
    <string name="time_live_sharing_15">15 minutes</string>
    <string name="time_live_sharing_60">1 hour</string>
    <string name="time_live_sharing_8">8 hours</string>
    <string name="time_live_sharing_custom">Custom</string>
    <string name="stop_shaing">Stop Sharing Location</string>
</resources>