<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:emojicon="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto">


    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <androidx.cardview.widget.CardView
            android:id="@+id/end_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="4dp">


            <fragment
                android:id="@+id/fragment_destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                />



        </androidx.cardview.widget.CardView>


    </RelativeLayout>



    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bg_global_theme"
            android:layout_gravity="bottom"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="40dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/share_live_location"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="25dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:paddingBottom="40dp"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/time_15_minute"
                    android:layout_width="wrap_content"
                    android:text="@string/time_live_sharing_15"
                    android:background="@drawable/rounded_edittext"
                    android:layout_height="wrap_content" />


                <Button
                    android:id="@+id/time_60_minute"
                    android:background="@drawable/rounded_edittext__3"
                    android:text="@string/time_live_sharing_60"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <Button
                    android:id="@+id/time_8_hours"
                    android:background="@drawable/rounded_edittext"
                    android:text="@string/time_live_sharing_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <Button
                    android:id="@+id/time_custom_time"
                    android:layout_width="wrap_content"
                    android:text="@string/time_live_sharing_custom"
                    android:background="@drawable/rounded_edittext"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/layout_message_control"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
                android:layout_gravity="center_horizontal"
                android:gravity="bottom"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/buttonEmoji"
                    android:layout_width="43dp"
                    android:layout_height="43dp"
                    android:layout_alignBottom="@+id/editTextMessage"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="2dp"
                    android:padding="4dp"
                    android:src="@drawable/smiley" />


                <hani.momanii.supernova_emoji_library.Helper.EmojiconEditText
                    android:id="@+id/txt_message"
                    android:layout_width="208dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="2dp"
                    android:layout_toEndOf="@+id/buttonEmoji"
                    android:layout_toRightOf="@+id/buttonEmoji"
                    android:layout_toStartOf="@+id/photoPickerButton"
                    android:background="@drawable/rounded_edittext_2"
                    android:hint="@string/type_your_message_hint"
                    emojicon:emojiconSize="28sp" />


                <Button
                    android:id="@+id/btn_send"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_send_black_24dp" />


            </LinearLayout>


    </LinearLayout>

</FrameLayout>

