<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/message"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@drawable/message_background"
        android:id="@+id/layout_image"
        android:visibility="gone"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/image_message"
            android:background="@drawable/image_placeholder"
            />



    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@drawable/message_background"
        android:id="@+id/layout_map"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/image_map"
            android:background="@drawable/ic_map_icon"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@drawable/message_background"
        android:id="@+id/layout_live_loc"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/image_loc"
            android:background="@drawable/live_location_icon" />

        <Button
            android:id="@+id/stop_sharing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:text="@string/stop_shaing"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@drawable/message_background"
        android:id="@+id/layout_doc"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/image_doc"
            android:background="@mipmap/ic_doc_round"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_voice_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner2"
        android:paddingLeft="1dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:orientation="horizontal">
        <ImageView
            android:text="play"
            android:textSize="10pt"
            android:id="@+id/ButtonPlayStop"
            android:background="@drawable/ic_play_arrow_black_24dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
        <SeekBar
            android:id="@+id/SeekBar_view"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_width="120dp"
            android:layout_below="@id/ButtonPlayStop"/>


    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_message_layout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/message_display"
            android:text="@string/template_message"
            android:textSize="16sp"
            android:linksClickable="true"
            android:layout_margin="2dp"
            android:background="@drawable/message_box"
            android:maxWidth="256dp"
            android:layout_width = "wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/details_display"
            android:text="@string/template_details"
            android:textSize="12sp"
            android:textColor="#FF888888"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>


</LinearLayout>