<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chat_root"
    xmlns:emojicon="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.android.gudana.chat.activities.ChatActivity">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbarStyle="outsideInset"
                android:clipToPadding="false"
                android:paddingTop="4dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="32dp"
                android:layout_alignParentTop="true"
                android:transcriptMode="normal"
                android:focusable="true"
                android:listSelector="@android:color/transparent"
                android:divider="@null"
                android:stackFromBottom="true"
                android:layout_above="@+id/layout_typing"
                android:id="@+id/listView_messages" />

            <LinearLayout android:id="@+id/layout_typing"
                android:orientation="horizontal" android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:gravity="center_horizontal"
                android:layout_above="@+id/layout_message_control">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/template_username"
                    android:id="@+id/users_typing"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/is_typing"
                    android:id="@+id/is_typing" />
            </LinearLayout>



            <RelativeLayout
                android:id="@+id/data_processing"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="57dp">

                <TextView
                    android:id="@+id/infos_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/rounded_edittext__3"
                    android:text="Data processing ..."
                    android:textColor="@android:color/white"
                    android:textSize="25sp"
                    android:textStyle="normal" />


                <ProgressBar
                    android:id="@+id/processin"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:indeterminate="true"
                    android:layout_marginBottom="6dp" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/infos_progress"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignBottom="@+id/listView_messages"
                android:layout_alignParentEnd="true">

                <TextView
                    android:id="@+id/infos_uploading_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="1dp"
                    android:text="0/0 files"
                    android:textColor="@android:color/white"
                    android:background="@color/colorPrimary"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <ProgressBar
                    android:id="@+id/progressbar_timerview"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center_horizontal|bottom"
                    android:indeterminate="false"
                    android:max="100"
                    android:progress="68"
                    android:progressDrawable="@drawable/progress_drawable" />

                <TextView
                    android:id="@+id/textViewToday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="X"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="normal" />


            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layout_message_control"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/rounded_edittext"
                android:gravity="bottom"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/buttonEmoji"
                    android:layout_width="43dp"
                    android:layout_height="43dp"
                    android:layout_alignBottom="@+id/editTextMessage"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="2dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_sentiment_satisfied_black_24dp" />


                <hani.momanii.supernova_emoji_library.Helper.EmojiconEditText
                    android:id="@+id/txt_message"
                    android:layout_width="208dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="2dp"
                    android:layout_toEndOf="@+id/buttonEmoji"
                    android:layout_toRightOf="@+id/buttonEmoji"
                    android:layout_toStartOf="@+id/photoPickerButton"
                    android:background="@drawable/rounded_edittext_2"
                    android:hint="@string/type_your_message_hint"
                    emojicon:emojiconSize="28sp" />


                <Button
                    android:id="@+id/btn_send"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_send_black_24dp" />

                <ImageView
                    android:id="@+id/bmb"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_view_comfy_black_24dp"
                    />


                <ImageButton
                    android:id="@+id/recordVoiceButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/ic_keyboard_voice_purple_24dp" />

            </LinearLayout>


</RelativeLayout>

</android.support.design.widget.CoordinatorLayout>

